--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,13 @@
     padding: 32px 0;
 }
 
+.main-content img {
+    object-fit: cover;
+    aspect-ratio: 1;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
 .content-page {
     margin: 0 auto;
     padding: 0 3.125rem;
@@ -376,4 +383,527 @@
     position: absolute;
     top: -20px;
     right: -5px;
+}
+
+.deliver-usp {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin-top: 16px;
+}
+
+.deliver-usp>div:nth-child(1) {
+    width: 5%;
+    display: flex;
+    align-items: center;
+}
+
+.deliver-usp>div:nth-child(2) {
+    width: 100%;
+}
+
+.date_deliver {
+    padding: 4px 8px;
+    border-radius: 4px;
+    color: #fff;
+    background: #039869 !important;
+}
+
+.product-selector_atc {
+    background: #000;
+    color: #fff;
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 8px;
+    padding: 12px;
+    /* width: 100%; */
+    text-align: center;
+    margin-top: 12px;
+    transition: all .2s;
+}
+
+.product_atc-footer-line {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.product_atc-footer-inline {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+}
+
+.product_atc-footer-inline:nth-child(1) {
+    padding-right: 16px;
+    border-right: 1px solid black;
+}
+
+.product_atc-footer-inline img,
+.product_atc-footer-inline svg {
+    width: 20px;
+    height: 20px;
+    display: block;
+}
+
+.product_atc-footer-inline p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.3em;
+
+    font-family: Nunito;
+}
+
+.hided {
+    display: none !important;
+}
+
+.product-payment_icons {
+    margin: 16px 0 !important;
+    display: block !important;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product-note_image {
+    display: block;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product-atc_icon_line {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    margin: 12px 0;
+}
+
+.product-atc_icon_line>div:nth-child(1) {
+    width: 5%;
+    display: flex;
+    align-items: center;
+}
+
+.product-atc_icon_line>div:nth-child(2) {
+    width: 100%;
+}
+
+.main_product-review,
+.section_press_logos_outer,
+.press_logos_wrapper,
+.product_judge-outer.pink,
+.product_ingr-block {
+    background: #f3eee0 !important;
+}
+
+.main_product-review {
+    margin-top: 24px;
+    padding: 12px;
+    border-radius: 12px;
+    background: #fff7f8;
+}
+
+.main_product-review-meta {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-bottom: 8px;
+}
+
+.main_product-review-meta p {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 16px;
+    line-height: 1.3em;
+
+    font-family: Nunito;
+}
+
+.main_product-review-stars {
+    display: block;
+    max-width: 100px;
+    margin-top: 6px;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.main_product-review-meta span {
+    display: flex;
+    align-items: center;
+}
+
+.main_product-review-meta p img {
+    max-width: 120px;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.main_product-review-meta>div:nth-child(1) {
+    width: 15%;
+}
+
+.main_product-review-meta>div:nth-child(2) {
+    width: 100%;
+}
+
+.product_tab-thumb p {
+    margin: 0 !important;
+    font-size: 16px !important;
+    line-height: 1.3em !important;
+}
+
+.main_product-review-content p {
+    margin-top: 0 !important;
+    margin-bottom: 8px !important;
+    line-height: 1.3em !important;
+    font-size: 16px !important;
+    letter-spacing: 0 !important;
+
+    font-family: Nunito !important;
+}
+
+.main_product-review-content p:last-child {
+    margin-bottom: 0;
+}
+
+
+.product_tab-block_out {
+    margin-top: 16px;
+}
+
+.product_tab-block.active {
+    border: 1px solid #039869 !important;
+}
+
+.product_tab-block {
+    margin-bottom: 16px;
+    padding: 16px;
+    border-radius: 32px;
+    border: 1px solid #d2d2d2;
+    cursor: pointer;
+}
+
+.product_tab-thumb {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 12px;
+}
+
+.product_tab-thumb p {
+    margin: 0;
+    font-size: 16px;
+    line-height: 1.3em;
+}
+
+.product_tab-thumb span {
+    display: flex;
+    align-items: center;
+}
+
+.product_tab-thumb img {
+    width: 24px;
+    display: block;
+    transition: all .2s;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product_tab-content {
+    padding-top: 16px;
+    display: none;
+}
+
+.product_tab-content_ul {
+    margin: 16px 0;
+    padding-left: 40px;
+
+    overflow: hidden;
+}
+
+.product_tab-content_ul li {
+    list-style-type: disc;
+    font-size: 16px;
+    font-family: Montserrat;
+}
+
+.press_logos_wrapper {
+    background: #f3eee0 !important;
+}
+
+.press_logos_wrapper {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    text-align: center;
+    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    align-content: center;
+    display: grid;
+    margin: auto;
+    grid-gap: 20px 70px;
+    align-items: center;
+    margin-top: 32px;
+    height: 90px;
+}
+
+.title_wrap {
+    font-size: 24px;
+    letter-spacing: 0px;
+    color: #000000;
+    margin: 0;
+}
+
+.auto_scrolling_logos {
+    width: 100%;
+    overflow: hidden;
+    min-width: 1px;
+}
+
+@keyframes logo_scroll {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+.logos_wrap {
+    display: flex;
+    width: max-content;
+    animation: logo_scroll 60s linear infinite;
+}
+
+.logos_wrap img {
+    height: 30px;
+    display: block;
+    margin: 0 50px;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product-judge_outer {
+    padding-top: 56px;
+}
+
+.product_judge-container {
+    max-width: 800px;
+    margin: auto;
+}
+
+.product-section_title {
+    font-size: 32px;
+    line-height: 1.3em;
+    margin: 16px 0;
+    font-weight: 400;
+    font-family: Lora;
+}
+
+.centered {
+    text-align: center;
+}
+
+.product-section_text {
+    font-size: 18px;
+    margin: 16px 0;
+    line-height: 1.3em;
+    font-family: Nunito;
+}
+
+.product-section_title span {
+    color: #039869 !important;
+    font-family: Lora;
+}
+
+.product_why-bloating-grid {
+    display: flex;
+    gap: 16px;
+    margin-top: 40px;
+}
+
+.product_why-bloating-grid>div {
+    width: 100%;
+}
+
+.product_why-bloating-cell {
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.product_why-bloating-cell div img,
+.product_why-bloat-cell-inn {
+    min-height: 150px;
+}
+
+.product_why-bloating-grid img {
+    width: 100%;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product_why-bloat-cell-inn {
+    padding: 16px;
+    text-align: center;
+    background: #f7f7f7;
+}
+
+.product_why-bloat-cell-inn p {
+    margin: 0;
+    line-height: 1.3em;
+    font-size: 16px;
+    font-family: Nunito;
+}
+
+.product_why-note-img img {
+    width: 100%;
+    display: block;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product_why-note-img {
+    width: 100%;
+    max-width: 920px;
+    margin: auto;
+}
+
+.product_arrow-img {
+    display: block;
+    width: 100%;
+    max-width: 48px;
+    margin: 24px auto;
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.product_judge-container {
+    max-width: 800px;
+    margin: auto;
+}
+
+.product-section_title {
+    font-size: 32px;
+    line-height: 1.3em;
+    margin: 16px 0;
+    font-weight: 400;
+    font-family: Lora;
+}
+
+.centered {
+    text-align: center;
+}
+
+.product_judge-container.top_padding {
+    margin-bottom: 40px;
+}
+
+.product_judge-container {
+    max-width: 800px;
+    margin: auto;
+}
+
+.product-section_title span {
+    color: #039869 !important;
+}
+
+.pli_outer {
+    padding: 0 0;
+    margin-top: -16px;
+}
+
+.pli_flex {
+    display: flex;
+    gap: 100px;
+    align-items: center;
+}
+
+.pli_flex>div {
+    width: 100%;
+}
+
+.pli_flex img {
+    display: block;
+    width: 100%;
+
+    object-fit: contain !important;
+    aspect-ratio: 0 !important;
+    border-radius: 0 !important;
+    overflow: auto !important;
+}
+
+.pli_top-text *,
+.pli_pink-text *,
+.pli_bottom-text * {
+    font-size: 18px;
+    line-height: 1.3em;
+    margin: 8px 0;
+}
+
+.pli_top-text ul {
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.pli_top-text li {
+    padding-left: 32px;
+    color: #0c7c00;
+    background-image: url('../assets/icons/check-mark_17013456_2_1.png');
+    background-size: 20px;
+    background-repeat: no-repeat;
+    list-style: none;
+    font-weight: 600;
+    font-family: Nunito;
+}
+
+.pli_bottom-text li,
+.pli_pink-text li {
+    padding-left: 32px;
+    color: #a60003;
+    background-image: url('../assets/icons/Vector_7.png');
+    background-size: 20px;
+    background-repeat: no-repeat;
+    list-style: none;
+    font-weight: 600;
+    font-family: Nunito;
+}
+
+.pli_pink-text {
+    margin: 24px 0;
+    padding: 8px 16px;
+    border-radius: 8px;
+    background: #ffe3e3;
 }
