--- a/css/reset.css
+++ b/css/reset.css
@@ -37,12 +37,12 @@ body {
     width: 100%;
 }
 
-.main-content img {
+/* .main-content img {
     object-fit: cover;
     aspect-ratio: 1;
     border-radius: 8px;
     overflow: hidden;
-}
+} */
 
 .content-page_container>div {
     width: 100%;
