--- a/css/variables.css
+++ b/css/variables.css
@@ -129,6 +129,26 @@
     --payment-terms-background-color: rgb(255 255 255);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+.h0,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5 {
+    font-family: var(--font-heading-family);
+    font-style: var(--font-heading-style);
+    font-weight: var(--font-heading-weight);
+    letter-spacing: calc(var(--font-heading-scale) * .06rem);
+    color: rgb(var(--color-foreground));
+    line-height: calc(1 + .3 / max(1, var(--font-heading-scale)));
+    word-break: break-word;
+}
+
 @media screen and (min-width: 750px) {
     body {
         font-size: 1.6rem;
@@ -138,5 +158,17 @@
 @media screen and (min-width: 750px) {
     .content-page {
         padding: 0 5rem;
+    }
+}
+
+@media only screen and (min-width: 678px) {
+    .Mobile_only {
+        display: none !important;
+    }
+}
+
+@media only screen and (min-width: 678px) {
+    .pli_flex.reversed {
+        flex-direction: row-reverse;
     }
 }
