--- a/css/reset.css
+++ b/css/reset.css
@@ -21,9 +21,11 @@ body {
 }
 
 .content-page {
-    max-width: 1340px !important;
-    width: 1240px;
-    padding: 0 50px;
+    box-sizing: border-box; /* Quan trọng: width sẽ bao gồm cả padding */
+    max-width: 1340px;      /* Tổng độ rộng tối đa bao gồm cả lề */
+    width: 100%;            /* Co giãn linh hoạt trên Tablet/Mobile */
+    padding: 0 50px;        /* Padding lề 2 bên */
+    margin: 0 auto;         /* Căn giữa toàn bộ trang */
 }
 
 .content p {
