--- a/css/main.css
+++ b/css/main.css
@@ -1912,6 +1912,22 @@
 }
 
 @media (max-width: 768px) {
+    .slick-prev {
+        left: 24px;
+        z-index: 2;
+        width: 32px;
+        height: 32px;
+        display: block !important;
+    }
+
+    .slick-next {
+        right: 24px;
+        z-index: 2;
+        width: 32px;
+        height: 32px;
+        display: block !important;
+    }
+
     .content-page_container {
         flex-direction: column;
         gap: 24px;
@@ -2043,6 +2059,22 @@
 
     .main_product-image-carousel_thumbs .main_product-image-box {
         padding: 0 4px;
+    }
+
+    .slick-prev {
+        left: 24px;
+        z-index: 2;
+        width: 32px;
+        height: 32px;
+        display: block !important;
+    }
+
+    .slick-next {
+        right: 24px;
+        z-index: 2;
+        width: 32px;
+        height: 32px;
+        display: block !important;
     }
 }
 
@@ -2235,14 +2267,14 @@
         text-align: center;
     }
 
-    .product_expert-content img{
+    .product_expert-content img {
         object-fit: contain !important;
         aspect-ratio: 0 !important;
         border-radius: 0 !important;
         overflow: auto !important;
     }
 
-        .product_text-image-reviews {
+    .product_text-image-reviews {
         max-width: 250px;
         margin: auto;
         display: block;
