--- a/css/main.css
+++ b/css/main.css
@@ -754,9 +754,9 @@
     padding: 56px 0;
 }
 
-/* .pli-gip {
-    padding: 0 !important;
-} */
+.pli-gip {
+    padding-top: 56px !important;
+}
 
 .product_judge-container {
     max-width: 800px;
